--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -43,7 +43,14 @@
             android:text="Guardar"
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/purple_500" />
-
+        <EditText
+            android:id="@+id/txtPh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Ph actual"
+            android:inputType="number"
+            android:layout_marginTop="8dp"
+            />
     </LinearLayout>
 
     <!-- Resto del diseño original -->
